--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                             </ul>
                             <div class="text-md-start ">
                                 <a href="about-us.html" class="btn btn-custom btn-gradient btn-lg mx-2  my-2">
-                                   About Us <img src="images/icons/rocket-white.svg" alt="rocket-icon"
+                                    About Us <img src="images/icons/rocket-white.svg" alt="rocket-icon"
                                         class="btn-icon bg-primary">
                                 </a>
                             </div>
@@ -476,8 +476,8 @@
                 </div>
                 <div class="row mt-lg-4 justify-content-center">
                     <div class="col-lg-4 col-md-6 col-12 my-3">
-                        <div class="invest-card py-5">
-                            <span class="pb-4 invest-icon">
+                        <div class="invest-card py-md-5">
+                            <span class=" invest-icon">
                                 <img src="images/icons/Frame.svg" class="">
                             </span>
                             <h2 class="about-heading py-3 fw-semibold">Borderless Access </h2>
@@ -491,8 +491,8 @@
 
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 my-3">
-                        <div class="invest-card-2 py-5">
-                            <span class="pb-4 invest-icon-2">
+                        <div class="invest-card-2 py-md-5">
+                            <span class=" invest-icon-2">
                                 <img src="images/icons/capita-icon-2.svg" class="">
                             </span>
                             <h2 class="about-heading-2 py-3 fw-semibold">Real–Time Tracking</h2>
@@ -506,8 +506,8 @@
 
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 my-3">
-                        <div class="invest-card py-5">
-                            <span class="pb-4 invest-icon">
+                        <div class="invest-card py-md-5">
+                            <span class=" invest-icon">
                                 <img src="images/icons/capital-icon-3.svg" class="">
                             </span>
                             <h2 class="about-heading py-3  fw-semibold">Seamless Compliance </h2>
@@ -804,8 +804,8 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <img src="images/footer-logo.png" alt="logo" class="f-logo">
-                    <p class="f-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna.</p>
+                    <p class="f-para">ICARUS Wealth empowers individuals with smart investment solutions and financial
+                        education, helping you build a secure and sustainable future.</p>
                     <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
@@ -832,7 +832,7 @@
                             </ul>
                         </div>
                         <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
-                            <h5 class="f-title text-sm-start text-center">Supprot</h5>
+                            <h5 class="f-title text-sm-start text-center">Support</h5>
                             <ul class="list-unstyled f-links">
 
                                 <li>
