--- a/contact.html
+++ b/contact.html
@@ -122,8 +122,8 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <img src="images/footer-logo.png" alt="logo" class="f-logo">
-                    <p class="f-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna.</p>
+                    <p class="f-para">ICARUS Wealth empowers individuals with smart investment solutions and financial
+                        education, helping you build a secure and sustainable future.</p>
                     <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
@@ -150,7 +150,7 @@
                             </ul>
                         </div>
                         <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
-                            <h5 class="f-title text-sm-start text-center">Supprot</h5>
+                            <h5 class="f-title text-sm-start text-center">Support</h5>
                             <ul class="list-unstyled f-links">
 
                                 <li>
