--- a/investment.html
+++ b/investment.html
@@ -88,7 +88,7 @@
                 <div class="row mt-lg-4 justify-content-center">
                     <div class="col-lg-4 col-md-6 col-12 my-3">
                         <div class="invest-card">
-                            <span class="pb-4 invest-icon">
+                            <span class=" invest-icon">
                                 <img src="images/icons/invest-icon-1.svg" class="">
                             </span>
                             <h2 class="investcard-heading py-3">Self-Invest </h2>
@@ -107,7 +107,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 my-3">
                         <div class="invest-card-2">
-                            <span class="pb-4 invest-icon-2">
+                            <span class=" invest-icon-2">
                                 <img src="images/icons/invest-icon-2.svg">
                             </span>
                             <h2 class="investcard-heading-2 py-3">Goal-Based Investing </h2>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 my-3">
                         <div class="invest-card">
-                            <span class="pb-4 invest-icon">
+                            <span class=" invest-icon">
                                 <img src="images/icons/invest-icon-3.svg">
                             </span>
                             <h2 class="investcard-heading py-3">Auto-Invest </h2>
@@ -231,8 +231,8 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <img src="images/footer-logo.png" alt="logo" class="f-logo">
-                    <p class="f-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna.</p>
+                    <p class="f-para">ICARUS Wealth empowers individuals with smart investment solutions and financial
+                        education, helping you build a secure and sustainable future.</p>
                     <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
@@ -259,7 +259,7 @@
                             </ul>
                         </div>
                         <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
-                            <h5 class="f-title text-sm-start text-center">Supprot</h5>
+                            <h5 class="f-title text-sm-start text-center">Support</h5>
                             <ul class="list-unstyled f-links">
 
                                 <li>
