--- a/education-hub.html
+++ b/education-hub.html
@@ -21,7 +21,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/logo.svg" alt="Icarus Wealth Logo" class="navbar-logo">
                 </a>
 
@@ -48,7 +48,8 @@
                         </li>
                     </ul>
                     <div class="d-flex justify-content-center align-items-center">
-                        <a href="contact.html" class="btn btn-custom btn-white mx-lg-0 mx-auto">
+                        <a href="https://account.icaruswealth.co.nz/login" target="_blank"
+                            class="btn btn-custom btn-white mx-lg-0 mx-auto">
                             Get Started
                             <img src="images/icons/rocket-white.svg" alt="rocket-icon" class="btn-icon bg-primary">
                         </a>
@@ -80,22 +81,31 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="sec-title text-center">Featured Articles</h2>
+                        <h2 class="sec-title text-center">Educational Blogs</h2>
                     </div>
                 </div>
                 <div class="row mt-lg-4">
                     <div class="col-lg-4 col-md-6 col-12 my-3">
-                        <div class="article-box">
+                        <a href="How_Indias_Mutual_Fund_Market_Can_Boost_Your_Passive_Income_Potential.html "
+                            class="article-box">
                             <div>
-
                                 <div class="img-wrapper position-relative">
-                                    <img src="images/article-1.png" alt="Article Image">
+                                    <img src="images/trading.png" alt="Article Image" class="img-fluid">
                                     <span class="article-tag">Investments</span>
                                 </div>
                                 <div class="article-content">
-                                    <h3 class="article-title">Understanding Mutual Funds: A Beginner’s Guide</h3>
-                                    <p class="article-expert">Learn how mutual funds work, their benefits, risks, and
-                                        how they can be a crucial part of your diversified portfolio.</p>
+                                    <h3 class="article-title">How India’s Mutual Fund Market Can Boost Your Passive
+                                        Income Potential</h3>
+                                    <p class="article-expert">India’s economic journey over the past decade has been
+                                        nothing
+                                        short of an
+                                        impressive story of
+                                        resilience and ambition. According to Invest
+                                        India
+                                        , the nation has clocked a
+                                        steady average
+                                        growth rate of 6-7% year after year, defying global slowdowns and geopolitical
+                                        uncertainties.</p>
                                 </div>
                             </div>
                             <div class="article-footer">
@@ -112,12 +122,13 @@
                                     <span>July 25, 2025</span>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12 my-3">
-                        <div class="article-box">
-                            <div>
 
+                        </a>
+                    </div>
+                    <!-- <div class="col-lg-4 col-md-6 col-12 my-3">
+                        <div class="article-box">
+
+                            <div>
                                 <div class="img-wrapper position-relative">
                                     <img src="images/article-2.png" alt="Article Image">
                                     <span class="article-tag">Financial Tips</span>
@@ -263,7 +274,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -273,12 +284,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <img src="images/footer-logo.png" alt="logo" class="f-logo">
-                    <p class="f-para">ICARUS Wealth empowers individuals with smart investment solutions and financial education, helping you build a secure and sustainable future.</p>
+                    <a href="index.html"><img src="images/footer-logo.png" alt="logo" class="f-logo"></a>
+                    <p class="f-para">ICARUS Wealth empowers individuals with smart investment solutions and financial
+                        education, helping you build a secure and sustainable future.</p>
                     <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-tiktok"></i></a></li>
+                        <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-linkedin"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 col-12 my-md-0 my-sm-4 my-3">
@@ -317,7 +331,8 @@
                         <li><a href="#" class="d-flex align-items-center"><i
                                     class="fa-solid fa-envelope"></i>support@icaruswealth.co.nz</a></li>
 
-                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>2/10 Stewart Drive, Newlands, Wellington, 6037</a></li>
+                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>2/10 Stewart Drive, Newlands,
+                                Wellington, 6037</a></li>
                     </ul>
                 </div>
             </div>
