--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/logo.svg" alt="Icarus Wealth Logo" class="navbar-logo">
                 </a>
 
@@ -48,7 +48,8 @@
                         </li>
                     </ul>
                     <div class="d-flex justify-content-center align-items-center">
-                        <a href="contact.html" class="btn btn-custom btn-green mx-lg-0 mx-auto">
+                        <a href="https://account.icaruswealth.co.nz/login" target="_blank"
+                            class="btn btn-custom btn-green mx-lg-0 mx-auto">
                             Get Started
                             <img src="images/icons/rocket-icon.svg" alt="rocket-icon" class="btn-icon bg-white">
                         </a>
@@ -803,13 +804,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <img src="images/footer-logo.png" alt="logo" class="f-logo">
+                    <a href="index.html"><img src="images/footer-logo.png" alt="logo" class="f-logo"></a>
                     <p class="f-para">ICARUS Wealth empowers individuals with smart investment solutions and financial
                         education, helping you build a secure and sustainable future.</p>
                     <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-tiktok"></i></a></li>
+                        <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-linkedin"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 col-12 my-md-0 my-sm-4 my-3">
