--- a/investment.html
+++ b/investment.html
@@ -21,7 +21,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/logo.svg" alt="Icarus Wealth Logo" class="navbar-logo">
                 </a>
 
@@ -48,7 +48,8 @@
                         </li>
                     </ul>
                     <div class="d-flex justify-content-center align-items-center">
-                        <a href="contact.html" class="btn btn-custom btn-white mx-lg-0 mx-auto">
+                        <a href="https://account.icaruswealth.co.nz/login" target="_blank"
+                            class="btn btn-custom btn-white mx-lg-0 mx-auto">
                             Get Started
                             <img src="images/icons/rocket-white.svg" alt="rocket-icon" class="btn-icon bg-primary">
                         </a>
@@ -66,10 +67,10 @@
                         <h1 class="small-banner-title fw-bold text-black">Invest in India with Ease. </h1>
                         <p class="banner-para text-black">Set up your Indian stock market investment plan with access to
                             100 top-performing mutual funds. </p>
-                        <a href="contact.html" class="btn btn-custom btn-gradient">
+                        <!-- <a href="contact.html" class="btn btn-custom btn-gradient">
                             Get Started
                             <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -230,13 +231,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <img src="images/footer-logo.png" alt="logo" class="f-logo">
+                    <a href="index.html"><img src="images/footer-logo.png" alt="logo" class="f-logo"></a>
                     <p class="f-para">ICARUS Wealth empowers individuals with smart investment solutions and financial
                         education, helping you build a secure and sustainable future.</p>
                     <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-tiktok"></i></a></li>
+                        <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-linkedin"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 col-12 my-md-0 my-sm-4 my-3">
