Feedback updated and added backend script

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="d-flex justify-content-center align-items-center">
                         <a href="https://account.icaruswealth.co.nz/login" target="_blank"
                             class="btn btn-custom btn-green mx-lg-0 mx-auto">
-                            Get Started
+                            Login/Sign up
                             <img src="images/icons/rocket-icon.svg" alt="rocket-icon" class="btn-icon bg-white">
                         </a>
                     </div>
@@ -785,10 +785,10 @@
                                 <p class="para text-white">Take the first step towards building your wealth today.</p>
 
                                 <div class="d-flex align-items-center gap-3">
-                                    <a href="#">
+                                    <a href="https://play.google.com/store/apps/details?id=com.icaruswealth&hl=en_AU" target="_blank">
                                         <img src="images/google-play.png" alt="Google play" class="play-img">
                                     </a>
-                                    <a href="#">
+                                    <a href="https://apps.apple.com/au/app/icarus-wealth/id6746960438" target="_blank">
                                         <img src="images/apple.png" alt="Apple store" class="play-img">
                                     </a>
                                 </div>
@@ -865,6 +865,7 @@
     <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved.</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="js/social-links.js"></script>
 </body>
 
 </html>
