--- a/investment.html
+++ b/investment.html
@@ -50,7 +50,7 @@
                     <div class="d-flex justify-content-center align-items-center">
                         <a href="https://account.icaruswealth.co.nz/login" target="_blank"
                             class="btn btn-custom btn-white mx-lg-0 mx-auto">
-                            Get Started
+                            Login/Sign up
                             <img src="images/icons/rocket-white.svg" alt="rocket-icon" class="btn-icon bg-primary">
                         </a>
                     </div>
@@ -291,6 +291,7 @@
     <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved.</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="js/social-links.js"></script>
 </body>
 
 </html>
