--- a/about-us.html
+++ b/about-us.html
@@ -49,7 +49,7 @@
                     </ul>
                     <div class="d-flex justify-content-center align-items-center">
                         <a href="https://account.icaruswealth.co.nz/login" target="_blank" class="btn btn-custom btn-white mx-lg-0 mx-auto">
-                            Get Started
+                            Login/Sign up
                             <img src="images/icons/rocket-white.svg" alt="rocket-icon" class="btn-icon bg-primary">
                         </a>
                     </div>
@@ -86,12 +86,7 @@
                             helping foreign investors access Indian market opportunities through a simple, secure, and
                             low-cost app.
                         </p>
-                        <div class="d-flex py-4 align-content-center justify-content-center">
-                            <a href="contact.html" class="btn btn-custom btn-gradient">
-                                Download The App
-                                <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
-                            </a>
-                        </div>
+
 
                     </div>
                 </div>
@@ -276,6 +271,7 @@
     <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved.</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="js/social-links.js"></script>
 </body>
 
 </html>
