--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                         </h1>
                         <p class="banner-para text-black">Have a question about how to invest abroad, need help with
                             your account, or just want to learn more about our platform? We’re here to help. </p>
-                        <!-- <a href="contact.html" class="btn btn-custom btn-gradient">
+                        <!-- <a href="https://play.google.com/store/apps/details?id=com.icaruswealth&hl=en_AU&pli=1" target="_blank" class="btn btn-custom btn-gradient">
                             Get Started
                             <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
                         </a> -->
