--- a/education-hub.html
+++ b/education-hub.html
@@ -68,7 +68,7 @@
                         <p class="banner-para text-black">Explore articles, guides and market updates to help you invest
                             in India with confidence. We cover everything from beginner tips to in-depth mutual funds
                             analysis. </p>
-                        <a href="contact.html" class="btn btn-custom btn-gradient">
+                        <a href="https://play.google.com/store/apps/details?id=com.icaruswealth&hl=en_AU&pli=1" target="_blank" class="btn btn-custom btn-gradient">
                             Download The App
                             <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
                         </a>
