--- a/about-us.html
+++ b/about-us.html
@@ -66,7 +66,7 @@
                         <h1 class="small-banner-title fw-bold text-black">About Us</h1>
                         <p class="banner-para text-black">Empowering investors we help individuals grow their wealth
                             with smart investing</p>
-                        <a href="https://play.google.com/store/apps/details?id=com.icaruswealth&hl=en_AU&pli=1" target="_blank" class="btn btn-custom btn-gradient">
+                         <a href="/#download-app" class="btn btn-custom btn-gradient">
                             Download The App
                             <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
                         </a>
