--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                 </li>
                             </ul>
                             <div class="text-md-start ">
-                                <a href="https://play.google.com/store/apps/details?id=com.icaruswealth&hl=en_AU&pli=1" target="_blank" class="btn btn-custom btn-gradient btn-lg mx-2  my-2">
+                                <a href="#download-app" class="btn btn-custom btn-gradient btn-lg mx-2  my-2">
                                     Download The App <img src="images/icons/rocket-white.svg" alt="rocket-icon"
                                         class="btn-icon bg-primary">
                                 </a>
@@ -454,7 +454,7 @@
                     </div>
                 </div>
                 <div class="d-flex py-3 align-content-center justify-content-center">
-                    <a href="https://play.google.com/store/apps/details?id=com.icaruswealth&hl=en_AU&pli=1" target="_blank" class="btn btn-custom btn-gradient">
+                     <a href="#download-app" class="btn btn-custom btn-gradient">
                         Download The App
                         <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
                     </a>
@@ -771,7 +771,7 @@
             </div>
         </section>
 
-        <section class="cta-section">
+        <section class="cta-section" id="download-app">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
